fixed nav below bx bar on mobile

--- a/scss-partials/_header.scss
+++ b/scss-partials/_header.scss
@@ -57,6 +57,8 @@ body {
         // stick to top on mobile nav open for bx banners
         &.mobile-open {
             top: 0 !important;
+            position: fixed !important;
+            z-index: 999999999999 !important;
         }
 
         #header-wrap {
